new link for latest (default) snapshot
new data sharing strategy is working. we just need to update the rest of the links

--- a/anvio/data/misc/KEGG-SNAPSHOTS.yaml
+++ b/anvio/data/misc/KEGG-SNAPSHOTS.yaml
@@ -129,7 +129,7 @@ v2025-08-07:
     modules_db_version: 4
 
 v2025-11-07:
-    url: https://figshare.com/ndownloader/files/59407568
+    url: https://cloud.uol.de/public.php/dav/files/HM2o22mExzoEa3n
     archive_name: KEGG_build_2025-11-07_68221bd12b30.tar.gz
     hash: 68221bd12b30
     modules_db_version: 4
