--- a/anvio/data/misc/KEGG-SNAPSHOTS.yaml
+++ b/anvio/data/misc/KEGG-SNAPSHOTS.yaml
@@ -137,6 +137,7 @@ v2025-11-07:
 # How to add a new KEGG snapshot to this file:
 # 1. download the latest data directly from KEGG by running
 #    `anvi-setup-kegg-data -D --kegg-data-dir ./KEGG -T 5 --include-nt-KOs`
+#    IMPORTANT: the directory MUST be called `KEGG` or the setup won't work
 # 2. get the hash value and version info from the MODULES.db:
 #    `anvi-db-info ./KEGG/MODULES.db`
 # 3. archive that directory:
@@ -145,8 +146,12 @@ v2025-11-07:
 #   MODULES.db hash value obtained in step 2
 # 4. Test that setup works with this archive by running
 #    `anvi-setup-kegg-data --kegg-archive KEGG_build_YYYY-MM-DD_HASH.tar.gz --kegg-data-dir TEST_NEW_KEGG_ARCHIVE`
-# 5. Upload the .tar.gz archive to figshare and get the download url
-# 6. Finally, add an entry to the bottom of this file with the url, archive name, and MODULES.db hash and version. 
+# 5. Upload the .tar.gz archive to a data repository that works with `curl` and get the download URL.
+#    Figshare doesn't work, but Zenodo is an option. Meren lab members can use the University of Oldenburg cloud 
+#    (cloud.uol.de, store the snapshot on the ROSA HPC at `ROSA_SHARE_NEXTCLOUD/KEGG_SNAPSHOTS` and create a public 
+#    link for it to get the a URL that ends with a unique ID for the file. Then insert that ID into the <ID> part of
+#    "https://cloud.uol.de/public.php/dav/files/<ID>" to get the URL that goes into this file).
+# 6. Finally, add an entry to the bottom of this file with the URL, archive name, and MODULES.db hash and version. 
 #    You should also update the default self.target_snapshot variable in metabolism/setup.py to point to this 
 #    latest version that you have added.
 # 7. Test it by running `anvi-setup-kegg-data --kegg-data-dir TEST_NEW_KEGG` (you don't need to run the full thing, 
